fix: show only intercom icon on mobile version (#421)
* fix: showonlyintercomicon

* changed visible to block

* updated min-width

* fix: update

* fix: adapted design

* removed space

* fix: changed padding for display version

* fix: adjusted padding-right

--- a/src/components/intercom/index.module.css
+++ b/src/components/intercom/index.module.css
@@ -3,15 +3,16 @@
   height: 36px;
   bottom: 6px;
   right: 6px;
-  min-width: 123px;
-  padding-left: 13px;
+  padding-left: 18px;
   padding-right: 18px;
   z-index: 15;
 }
 
 @screen md {
   .launcher {
+    min-width: 123px;
     bottom: 20px;
     right: 20px;
+    padding-right: 25px;
   }
 }
